# dvb-mcp

./: .rules  .rules.dev  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_NEW_RESOURCE.md  Cargo.toml  FUTURE_PROMPTS.md  README.md  RESOURCES_GUIDE.md  RESOURCES_IMPLEMENTED.md  RESOURCES_QUICKREF.md  RESOURCES_SUMMARY.md  RESOURCE_ARCHITECTURE.md  RESOURCE_WORKAROUNDS.md  TEST_AUFGABEN.md  USAGE.md  USAGE_EXAMPLE.md  route_cache.rules  routes.json
.zed/: tasks.json
examples/: routes.rs
src/: main.rs  route_cache.rs  server.rs
src/server/: args.rs  osm_links.rs  server_handle.rs  usercontext.rs
