[package]
name = "dvb-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
dvb = {version = "0.7.2", features = ["iso8601-serialization"]}
schemars = "1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.rmcp]
version = "0.12"
features = ["transport-io", "elicitation", "macros", "schemars"]
