[package]
name = "dvb-mcp"
version = "0.1.1"
authors = ["Hendrik <hendrik@hoodie.de>"]
description = "MCP server for Dresden public transport (DVB) route planning and schedule information"

edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hoodie/dvb-mcp"
keywords = ["mcp", "mcp-server", "transport", "public-transport"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
dvb = { version = "0.8.0", features = [ "iso8601-serialization" ] }
proj = "0.31.0"
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.rmcp]
version = "0.16"
features = ["transport-io", "elicitation", "macros", "schemars"]
